samples/_failures_safe/1761554576_6deda6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87f27bb4.c: In function ‘main’:
./samples/SAFE/__tmp_87f27bb4.c:153:43: error: missing terminating " character
  153 |                     print_matrix(&result, "A + B
      |                                           ^~~~~~
./samples/SAFE/__tmp_87f27bb4.c:153:21: error: expected expression at end of input
  153 |                     print_matrix(&result, "A + B
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_87f27bb4.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87f27bb4.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87f27bb4.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87f27bb4.c:153:21: error: expected declaration or statement at end of input
